# MEMRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: api-surface-and-tools-report.md  enterprise-agent-platform-memory-integration.md  enterprise-platform-implementation-checklist.md  enterprise-platform-ui-plan.md  memory-rag-byod-architecture.md  repo-guide-current-state.md  repo-guide.md
infra/prometheus/: prometheus.yml
services/agent-workers/: Dockerfile  README.md  pyproject.toml
services/agent-workers/src/: knowledge_ingestion_stub.py  worker.py
services/agent-workers/src/activities/: __init__.py  memory.py  session.py
services/agent-workers/src/infra/: __init__.py  ollama_client.py  qdrant_client.py  redis_client.py  temporal_client.py
services/agent-workers/src/memory/: __init__.py  dedup.py  mem0_client.py  shared.py
services/agent-workers/src/recall/: __init__.py  grants.py  layer2.py  layer3.py  layer3_graphiti.py  layer4.py
services/agent-workers/src/tools/: promote_finding.py
services/agent-workers/src/workflows/: __init__.py  agent_workflow.py
services/agent-workers/tests/: conftest.py
services/agent-workers/tests/integration/: test_access_control.py  test_long_term_memory.py  test_session_buffer.py  test_shared_memory.py
services/agent-workers/tests/unit/: test_session_keys.py
services/connector-registry/: Dockerfile  docker-entrypoint.sh  go.mod  go.sum
services/connector-registry/cmd/: main.go
services/connector-registry/cmd/migrate/: main.go
services/connector-registry/internal/api/: handlers_connector.go  handlers_grants.go  server.go
services/connector-registry/internal/aws/: appconfig.go  config.go  secrets.go
services/connector-registry/internal/db/: queries.go  queries.sql  sqlc.yaml  store.go
services/connector-registry/internal/temporal/: client.go
services/connector-registry/migrations/: 001_knowledge_connectors.sql  002_knowledge_sync_state.sql  003_knowledge_sharing_grants.sql  004_pii_audit_log.sql  005_workflow_executions.sql
services/context-hydrator/: Dockerfile  README.md  pyproject.toml
services/knowledge-ingestion/: Dockerfile  README.md  pyproject.toml
services/knowledge-ingestion/src/: chunker.py  embedder.py  pii.py  worker.py
services/knowledge-ingestion/src/activities/: ingestion.py  pii_screen.py  sync_state.py  upsert.py
services/knowledge-ingestion/src/connectors/: __init__.py  confluence.py  github.py  rds_schema.py  slack.py
services/knowledge-ingestion/src/infra/: __init__.py  iceberg_client.py  ollama_client.py  postgres_client.py  qdrant_client.py  qdrant_init.py  temporal_client.py
services/knowledge-ingestion/src/workflows/: __init__.py  decay_memories.py  decay_workflow.py  ingestion.py
services/knowledge-ingestion/tests/integration/: test_byod_pipeline.py  test_connectors_e2e.py  test_mocks_integration.py  test_pii_pipeline.py
services/memory-api/: Dockerfile  README.md  pyproject.toml
services/memory-api/src/: main.py
services/memory-api/tests/: __init__.py  conftest.py  smoke_test.py
services/memory-api/tests/integration/: test_access_control.py  test_context_hydration.py  test_enterprise_compat_api.py  test_graphiti_kg.py  test_long_term_memory.py  test_session_buffer.py  test_shared_memory.py
specs/001-memrag-production-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-memrag-production-memory/checklists/: requirements.md
specs/001-memrag-production-memory/contracts/: connector_management_api.md  context_hydration.md
tests/e2e/: test_full_stack.py  test_independent_suites_idempotent.py  test_performance_benchmarks.py
tests/mocks/confluence-api-mock/: Dockerfile  app.py  pyproject.toml
tests/mocks/github-api-mock/: Dockerfile  app.py  pyproject.toml
