[project]
name = "memrag"
version = "0.1.0"
description = "MEMRAG — Production Memory, RAG & BYOD Knowledge Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/memrag-shared",
    "services/knowledge-ingestion",
    "services/memory-api",
]

[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmarks that require a live stack",
]

[tool.uv.sources]
memrag-shared = { workspace = true }
