[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrag-agent-workers"
version = "0.1.0"
description = "Temporal worker service for MEMRAG agent memory recall and storage"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MEMRAG Contributors"}
]

dependencies = [
    "memrag-shared",
    "temporalio>=1.3.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pyiceberg>=0.7.0",
    "mem0ai>=0.1.0",
    "memray>=0.13.0",  # Memory profiling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.275",
    "mypy>=1.4.1",
    "black>=23.7.0",
    "types-redis>=4.6.0",
    "boto3-stubs[sts,s3,iam]>=1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]  # line-too-long (handled by black)

[tool.pyright]
extraPaths = ["../../packages/memrag-shared/src"]
