[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrag-context-hydrator"
version = "0.1.0"
description = "Context hydration and assembly service for MEMRAG"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MEMRAG Contributors"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "prometheus-client>=0.19.0",
    "memrag-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.275",
    "mypy>=1.4.1",
    "black>=23.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]  # line-too-long (handled by black)

[tool.black]
line-length = 100
target-version = ["py311"]
