[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrag-knowledge-ingestion"
version = "0.1.0"
description = "Temporal worker service for MEMRAG knowledge ingestion and decay workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MEMRAG Contributors"}
]

dependencies = [
    "temporalio>=1.3.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pyiceberg>=0.7.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.275",
    "mypy>=1.4.1",
    "black>=23.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "temporalio.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "pyiceberg.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]  # line-too-long (handled by black)
