[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrag-memory-api"
version = "0.1.0"
description = "Enterprise compatibility HTTP API for MEMRAG memory operations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MEMRAG Contributors"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.7.0",
    "mem0ai>=0.1.0",
    "memrag-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.275",
    "mypy>=1.4.1",
    "black>=23.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]