[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memrag-confluence-api-mock"
version = "0.1.0"
description = "Confluence API mock service with OAuth 2.0 3-LO for testing MEMRAG connectors"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
